--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Groceries</title>
-  <base href="/groceries/">
+  <base href="/ng-test/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root>Loading...</app-root>
-  
+
     <script src="vendor/es6-shim/es6-shim.js"></script>
     <script src="vendor/reflect-metadata/Reflect.js"></script>
     <script src="vendor/systemjs/dist/system.src.js"></script>
@@ -20,6 +20,6 @@
         System.import('main');
       }).catch(console.error.bind(console));
     </script>
-  
+
 </body>
 </html>
